--- a/java-integration-testing/pom.xml
+++ b/java-integration-testing/pom.xml
@@ -7,12 +7,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <groupId>com.jessym</groupId>
     <artifactId>java-integration-testing</artifactId>
-    <version>1.0</version>
+    <version>NEXT-SNAPSHOT</version>
 
     <properties>
         <java.version>13</java.version>
@@ -72,4 +72,12 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
