Update Java EE tutorial

--- a/a-complete-introduction-to-java-ee/docker-compose.yaml
+++ b/a-complete-introduction-to-java-ee/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
 
   postgres:
     image: 'postgres:12.1'
+    container_name: 'java_ee_postgres'
     environment:
       - 'POSTGRES_USER=admin'
       - 'POSTGRES_PASSWORD=password'
